k8s/base/divolte-collector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: divolte-collector-service
  labels:
    component: divolte-collector
    tier: backend
spec:
  selector:
    component: divolte-collector
    tier: backend
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
