k8s/base/divolte-collector/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: divolte-collector-ingress
  annotations:
    ingress.bluemix.net/redirect-to-https: "True"
    ingress.bluemix.net/hsts: enabled=true maxAge=31536000 includeSubdomains=true
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: cookie
    ingress.kubernetes.io/affinity: cookie
spec:
  rules:
    - host: divolte.$(INGRESS_SUBDOMAIN)
      http:
        paths:
          - path: /
            backend:
              serviceName: divolte-collector-service
              servicePort: 80
